# Samsung-final

./: .gitignore  cmds.txt
chrome-extension/: manifest.json
chrome-extension/popup/: popup.css  popup.html  popup.js
chrome-extension/results/: results.css  results.html  results.js
chrome-extension/utils/: api.js
comp_analysis/samsung_prism/src/samsung_prism/backend/: app.py
customer_intelligence/customer/: .gitignore  README.md  pyproject.toml
customer_intelligence/customer/src/customer/: crew.py  main.py
customer_intelligence/customer/src/customer/backend/: app.py
customer_intelligence/customer/src/customer/config/: agents.yaml  tasks.yaml
customer_intelligence/customer/src/customer/tools/: serper_tool.py
digital_twin/: .gitignore  README.md  pyproject.toml
digital_twin/src/twin/: crew.py  main.py
digital_twin/src/twin/backend/: api.py
digital_twin/src/twin/config/: agents.yaml  tasks.yaml
digital_twin/src/twin/tools/: serper_tool.py
feed_back_crew/: README.md  pyproject.toml  tools_test.py
feed_back_crew/src/new_crew/: crew.py  main.py
feed_back_crew/src/new_crew/backend/: app.py
feed_back_crew/src/new_crew/config/: agents.yaml  tasks.yaml
feed_back_crew/src/new_crew/tools/: local_summarizer.py  serper_summarize_tool.py  serper_tool.py
one_last_time/: .gitignore  README.md  pyproject.toml  war_simulation_report.md
one_last_time/src/backend/: app.py  schemas.py
one_last_time/src/war_simulation_agent/: api_key_manager.py  crew.py  main.py  orchestrator.py  retry_utils.py
one_last_time/src/war_simulation_agent/config/: agents.yaml  tasks.yaml
one_last_time/src/war_simulation_agent/crews/: __init__.py  unified_crew.py
