[project]
name = "twin"
version = "0.1.0"
description = "twin using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
twin = "twin.main:run"
run_crew = "twin.main:run"
train = "twin.main:train"
replay = "twin.main:replay"
test = "twin.main:test"
run_with_trigger = "twin.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
