[project]
name = "new_crew"
version = "0.1.0"
description = "new-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
new_crew = "new_crew.main:run"
run_crew = "new_crew.main:run"
train = "new_crew.main:train"
replay = "new_crew.main:replay"
test = "new_crew.main:test"
run_with_trigger = "new_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
