[project]
name = "customer"
version = "0.1.0"
description = "customer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
customer = "customer.main:run"
run_crew = "customer.main:run"
train = "customer.main:train"
replay = "customer.main:replay"
test = "customer.main:test"
run_with_trigger = "customer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
